# sample-webhook-1

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_sample-webhook.yml
src/sample_webhook/: config.py  main.py
src/sample_webhook/api/: __init__.py  routes.py  webhook.py
src/sample_webhook/models/: github.py
src/sample_webhook/services/: webhook_handler.py
tests/: conftest.py  test_webhook.py
