[project]
name = "sample-webhook"
version = "0.1.0"
description = "FastAPI application for GitHub Webhook to handle pull request merges"
authors = [
    {name = "Jim Mallet", email = "jim.mallet@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic",
    "httpx"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"